Fixing layout for lower resolutions; Improved visibility of about button; Added sponsors and project logos

--- a/bsweb/src/assets/styles/index.css
+++ b/bsweb/src/assets/styles/index.css
@@ -123,3 +123,7 @@ body{
 .o-modal {
   z-index: 2000 !important;
 }
+
+.dark-bg {
+  background-color: #212529;
+}
